# antigravity-supertools

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  hooks.json  plugin.json
.github/workflows/: ci.yml
agents/: architect.md  compound-researcher.md  debugger.md  developer.md  reviewer.md
rules/: caveman-mode.md  supertools-integration.md  team-orchestration.md
skills/plannotator-annotate/: SKILL.md
skills/plannotator-compound/: SKILL.md
skills/plannotator-compound/assets/: report-template.html
skills/plannotator-compound/references/: claude-code-fallback.md
skills/plannotator-last/: SKILL.md
skills/plannotator-review/: SKILL.md
skills/plannotator-visual-explainer/: SKILL.md
skills/plannotator-visual-explainer/references/: design-system.md  pr-components.md  svg-patterns.md  theme-override.md
skills/setup-supertools/: SKILL.md
skills/supertools/: SKILL.md
skills/to-issues/: SKILL.md
skills/to-prd/: SKILL.md
skills/triage/: SKILL.md
supertools/: Cargo.toml
supertools/supertools-cli/: Cargo.toml
supertools/supertools-cli/src/: args.rs  browser.rs  diff_parser.rs  lib.rs  main.rs  protocol.rs  server.rs
supertools/supertools-cli/static/: index.html
supertools/supertools-cli/tests/: integration_tests.rs
supertools/supertools-ui/: Cargo.toml  index.css  index.html
supertools/supertools-ui/src/: app.rs  lib.rs
supertools/supertools-ui/src/components/: mod.rs  plan_review.rs
